--- a/site-tools/hive-key-updater/index.html
+++ b/site-tools/hive-key-updater/index.html
@@ -370,11 +370,32 @@
             </div>
           </div>
         </div>
-        <div class="card-footer text-muted text-center">
-          <p>
-            Powered by DHive | Made with <i class="fas fa-heart"></i> by
-            TheCrazyGM
-          </p>
+        <div class="card-footer text-muted">
+          <div class="row align-items-center">
+            <div class="col-md-8 text-center text-md-start">
+              <p class="mb-md-0">
+                Powered by DHive | Made with <i class="fas fa-heart"></i> by
+                TheCrazyGM
+              </p>
+            </div>
+            <div class="col-md-4 text-center text-md-end mt-2 mt-md-0">
+              <div class="node-selector-container">
+                <div class="d-flex align-items-center justify-content-center justify-content-md-end">
+                  <span class="me-2">Hive Node:</span>
+                  <div class="dropdown">
+                    <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="nodeSelector" data-bs-toggle="dropdown" aria-expanded="false">
+                      <span id="currentNodeText">api.hive.blog</span>
+                      <span id="nodeStatus" class="node-status ms-1"><i class="fas fa-circle"></i></span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end" id="nodeList" aria-labelledby="nodeSelector">
+                      <!-- Node list will be populated by JavaScript -->
+                    </ul>
+                  </div>
+                </div>
+                <div class="small text-muted mt-1" id="nodeVersionInfo"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
