prettier lint/formatting

--- a/site-tools/hive-key-updater/index.html
+++ b/site-tools/hive-key-updater/index.html
@@ -380,14 +380,28 @@
             </div>
             <div class="col-md-4 text-center text-md-end mt-2 mt-md-0">
               <div class="node-selector-container">
-                <div class="d-flex align-items-center justify-content-center justify-content-md-end">
+                <div
+                  class="d-flex align-items-center justify-content-center justify-content-md-end"
+                >
                   <span class="me-2">Hive Node:</span>
                   <div class="dropdown">
-                    <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="nodeSelector" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button
+                      class="btn btn-sm btn-outline-secondary dropdown-toggle"
+                      type="button"
+                      id="nodeSelector"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
                       <span id="currentNodeText">api.hive.blog</span>
-                      <span id="nodeStatus" class="node-status ms-1"><i class="fas fa-circle"></i></span>
+                      <span id="nodeStatus" class="node-status ms-1"
+                        ><i class="fas fa-circle"></i
+                      ></span>
                     </button>
-                    <ul class="dropdown-menu dropdown-menu-end" id="nodeList" aria-labelledby="nodeSelector">
+                    <ul
+                      class="dropdown-menu dropdown-menu-end"
+                      id="nodeList"
+                      aria-labelledby="nodeSelector"
+                    >
                       <!-- Node list will be populated by JavaScript -->
                     </ul>
                   </div>
