Add portfolio dashboard and trending posts tools, update stake form UI

--- a/site-tools/stake_on_vsc/index.html
+++ b/site-tools/stake_on_vsc/index.html
@@ -25,7 +25,10 @@
       </div>
       <div class="form-group">
         <label for="asset">Asset</label>
-        <input type="text" id="asset" value="hive" placeholder="e.g., hive" />
+        <select id="asset">
+          <option value="hive">HIVE</option>
+          <option value="hbd">HBD</option>
+        </select>
       </div>
       <div class="form-group">
         <label for="netId">Network ID</label>
